--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
     width: 100%;
-    height: 900px;
+    height: vh-100;
     margin: 3em auto;
     /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#f7cac9+0,92a8d1+100 */
     background: rgb(247, 202, 201);
