--- a/src/index.css
+++ b/src/index.css
@@ -3,13 +3,13 @@ body {
     height: vh-100;
     margin: 3em auto;
     /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#f7cac9+0,92a8d1+100 */
-    background: rgb(247, 202, 201);
+    background: #49a09d;
     /* Old browsers */
-    background: -moz-linear-gradient(-45deg, rgba(247, 202, 201, 1) 0%, rgba(146, 168, 209, 1) 100%);
+    background: -moz-linear-gradient(-45deg, #49a09d 0%, #5f2c82 100%);
     /* FF3.6-15 */
-    background: -webkit-linear-gradient(-45deg, rgba(247, 202, 201, 1) 0%, rgba(146, 168, 209, 1) 100%);
+    background: -webkit-linear-gradient(-45deg, #49a09d 0%, #5f2c82 100%);
     /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(135deg, rgba(247, 202, 201, 1) 0%, rgba(146, 168, 209, 1) 100%);
+    background: linear-gradient(135deg, #49a09d 0%, #5f2c82 100%);
     /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     /* IE6-9 fallback on horizontal gradient */
 }
